--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,6 +14,10 @@ padding: 16px;
 }
 */
 
+.logo, .logo-footer{
+    height: 50px;
+    width: auto;
+}
  .span roboto-medium {
         font-family: "Roboto", sans-serif;
         font-weight: 500;
